force-app/main/default/objects/API_Calling_System_Details__c/API_Calling_System_Details__c.object-meta.xml
<CustomObject>
    <label>API Calling System Details</label>
    <nameField>
        <displayFormat>ACSD-{000}</displayFormat>
        <label>SystemId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Calling System Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>