force-app/main/default/objects/API_Calling_System_Details__c/fields/System_Mode__c.field-meta.xml
<CustomField>
    <fullName>System_Mode__c</fullName>
    <label>System Mode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>