force-app/main/default/objects/API_Calling_System_Details__c/fields/System_Name__c.field-meta.xml
<CustomField>
    <fullName>System_Name__c</fullName>
    <label>System Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>