force-app/main/default/objects/API_Calling_System_Details__c/fields/Upsert_Related_To__c.field-meta.xml
<CustomField>
    <fullName>Upsert_Related_To__c</fullName>
    <label>Upsert Related To</label>
    <length>100</length>
    <type>Text</type>
</CustomField>