force-app/main/default/objects/API_Calling_System_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>System_Mode__c</columns>
    <columns>System_Name__c</columns>
    <columns>Target_Object__c</columns>
    <columns>Upsert_Related_To__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>